<resources>
    <string name="app_name">Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Príspevky</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_addevent">Pridať udalosť</string>
    <string name="menu_events">Udalosti</string>
    <string name="menu_friends">Priatelia</string>
    <string name="menu_addfriend">Vyhľadať priateľa</string>
    <string name="Login">Prihlásiť sa</string>
    <string name="SignUp">Vytvoriť nový účet</string>
    <string name="textLogin">Nemám účet</string>
    <string name="NameSingUp">Meno</string>
    <string name="EmailSingUp">Email</string>
    <string name="password">Password</string>
    <string name="StartMap">Zapnúť mapu</string>
    <string name="SingOut">Odhlásiť sa</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_add_image">Vložiť fotku</string>
    <string name="button_gps">Spustit GPS</string>
    <string name="button_clean">Uložiť</string>
    <string name="photo_before">Fotka pred</string>
    <string name="photo_after">Fotka po</string>
    <string name="location_permission_denied">Používateľ zamietol povolenie na vyhľadanie zariadenia.</string>
    <string name="undefined_location">Location is undefined</string>
    <string name="without_pictures">Kde su obrazky ?</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="place_name">place name</string>
    <string name="clear_text">clear text</string>
    <string name="photo">foto</string>
    <string name="date_ticket">Datum</string>
    <string name="user_name">Uživateľ</string>
    <string name="add_friend">pridať priatela</string>
    <string name="Search">Vyhladat</string>
    <string name="RemoveFriend">Odobrať</string>
    <string name="AddFriend">Pridať</string>
    <string name="Address">Adresa</string>
    <string name="Description">Popis</string>
    <string name="pictureEvent">Obrázok podujatia</string>
    <string name="InsertPicture">Vyberte fotku</string>
    <string name="NameEvent">Názov podujatia</string>
    <string name="InsertNameEvent">Vložte názov</string>
    <string name="InsertDetails">Vložte popis</string>
    <string name="DetailsEvent">Popis</string>
    <string name="DateTime">Dátum a čas</string>
    <string name="LocationEvent">Miesto podujatia</string>
    <string name="InputLocationEvent">Vyberte miesto</string>
    <string name="CreateEvent">Vytvoriť udalosť</string>
    <string name="Back">Späť</string>
    <string name="Time">Čas</string>
    <string name="Date">Dátum</string>
    <string name="ShowEvents">Udalosti</string>
    <string name="Settings">Upraviť profil</string>
    <string name="organizer">Organizátor</string>
    <string name="interest">Majú záujem</string>
    <string name="event">Udalosť</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="pictureBefore">Fotka pred</string>
    <string name="RatePlace">Odohnodte miesto</string>
    <string name="Comment">Komentár</string>
    <string name="Comments">Komentáre</string>
    <string name="MarkPlace">Označiť znečistené miesto</string>
    <string name="Info">Informacie o mieste</string>
    <string name="AddAfterPhoto">Odfotiť vyčistene miesto</string>
    <string name="photo_before_hint">Kliknutím pridáte futku</string>
    <string name="photo_hint">Kliknutím pridáte fotku</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_to_all_event">Všetky udalosti</string>
    <string name="button_to_my_event">Moje udalosti</string>
    <string name="button_to_my_places">Moje príspevky</string>
    <string name="Rate">Uložiť hodnotenie</string>
    <string name="delete_place">Odstrániť príspevok</string>
    <string name="button_to_attend_events">Zúčastním sa</string>
    <string name="placeCleared">Odfotiť vyčistené miesto</string>
    <string name="RateEvent">Ohodnotit udalosť</string>
    <string name="add_comment">Pridať komentár</string>
    <string name="menu_posts">Príspevky</string>
    <string name="delete_event">Odstrániť udalosť</string>
    <string name="participants">Účastníci</string>
    <string name="successfullySavedPlace">Príspevok bol uložený</string>
    <string name="failedSavedPlace">Príspevok sa nepodarilo uložiť</string>
</resources>
