<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10pt"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/textViewName"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name"
                android:textAlignment="center"
                android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/textViewCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_ticket" />

        <TextView
                android:id="@+id/valueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/textViewSugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/place_name" />

        <TextView
                android:id="@+id/valuePlaceName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/textViewProtein"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_text" />

        <TextView
                android:id="@+id/valueClearText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/textViewFats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/photo" />

        <TextView
                android:id="@+id/valueFoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>