<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/userImageNavHeeader" android:layout_above="@+id/buttonNavHeader"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>

    <TextView
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_above="@+id/buttonNavHeader"
            android:id="@+id/userNameNavHeader"
            app:layout_constraintTop_toTopOf="@+id/userImageNavHeeader"
            android:layout_marginTop="12dp" app:layout_constraintStart_toEndOf="@+id/userImageNavHeeader"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/userEmailNavHeader"
            app:layout_constraintStart_toEndOf="@+id/userImageNavHeeader" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonNavHeader" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/userNameNavHeader"/>
    <Button
            android:text="@string/Login"
            android:layout_width="wrap_content"
            android:layout_height="40dp" android:id="@+id/buttonNavHeader"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/userImageNavHeeader" android:onClick="loginButtonNavClicked"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
