<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Email"
            android:ems="10"
            android:id="@+id/emailUserLogin" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordUserLogin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:hint="Heslo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailUserLogin"/>
    <Button
            android:text="@string/Login"
            android:layout_width="126dp"
            android:layout_height="49dp"
            android:id="@+id/LoginButton" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordUserLogin" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="143dp" android:layout_marginStart="143dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="180dp"
            android:layout_marginRight="180dp" android:textColor="@android:color/black"
            android:onClick="LoginButtonClicked" app:layout_constraintHorizontal_bias="0.026"/>
    <TextView
            android:text="@string/textLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="128dp"
            android:layout_marginStart="128dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp" android:layout_marginRight="128dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="128dp"
            app:layout_constraintTop_toBottomOf="@+id/LoginButton" android:gravity="center"/>
    <Button
            android:text="@string/SignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/LoginCreateActivityButton"
            android:onClick="LoginCreateUserButtonOnClicked" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="64dp" android:layout_marginStart="64dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>